<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aleste Repostería</string>
    <string name="sing_out">Cerrar sesión</string>
    <string name="email">Correo Electrónico:</string>
    <string name="password">Contraseña:</string>
    <string name="repeat_password">Repita la contraseña:</string>
    <string name="register">Registrar</string>
    <string name="sing_in">INICIAR SESIÓN</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="does_not_have_account"><u>¡No tienes cuenta Registrate!</u></string>
    <string name="email_user">Correo: %s</string>
    <string name="cell_phone">Teléfono Celular: </string>
    <string name="product">Producto:</string>
    <string name="cake">Torta</string>
    <string name="cupcake">Cupcake</string>
    <string name="cookies">Galletas</string>
    <string name="dessert">Postres</string>
    <string name="remarks">Observaciones:</string>
    <string name="date_of_order">Fecha del Pedido:</string>
    <string name="date_format">DD-MM-YYYY</string>
    <string name="save">Guardar</string>
    <string name="info">Nombre: %s \nNúmero Celular: %s \nObservaciones: %s \nProducto: %s \nFecha de Publicación: %s</string>
    <string name="name_user">"Nombre completo:"</string>
    <string name="cell_phone_number">Número Celular:</string>
    <string name="address">Dirección:</string>

    <string name="menu_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_order">Pedidos</string>
    <string name="title_purchase">Compras</string>
    <string name="title_profile">Perfil</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favoritos:</string>
    <string name="payment_method">Metodo de Pago:</string>
    <string name="size">Tamaño:</string>
    <string name="cake_filling">Sabor del Relleno:</string>
    <string name="message">Mensaje:</string>
    <string name="delivery_date">Fecha de Entrega</string>
    <string name="taste">Sabor:</string>
    <string name="residential_address">Dirección de Entrega</string>
    <string name="country">País:</string>
    <string name="city">Ciudad:</string>
    <string name="district">Barrio:</string>
    <string name="complement">Complemento:</string>
    <string name="street">Dirección:</string>
    <string name="number_street">Número:</string>
    <string name="change_order">Modificar Pedido</string>
    <string name="remove_order">Eliminar Pedido</string>
    <string name="my_payments">Mis Pagos</string>
    <string name="my_shopping">Mis Pedidos</string>
    <string name="contact_information">Reposteria Aleste Canales de Contacto</string>
    <string name="help_ordering">¿Ayuda con tus pedidos?</string>
    <string name="personal_data">Mis Datos Personales</string>
    <string name="search">Buscar</string>
    <string name="warning_title">Advertencia</string>
    <string name="delete_purchase_msg">¿Desea eliminar el pedido %s ?</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="facebook">FACEBOOK</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="whatsapp">WhastApp</string>
    <string name="recover_password">Recuperar Contraseña</string>

</resources>