<?xml version="1.0" encoding="utf-8"?>

<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.purchase.PurchaseFragment">

    <TextView
        android:id="@+id/name_usuario_text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:textColor="#0E0000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/product"
        android:textColor="#090000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_usuario_text_View" />

    <CheckBox
        android:id="@+id/cake_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cake"
        app:layout_constraintEnd_toStartOf="@+id/cupcake_check_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_text_view" />

    <CheckBox
        android:id="@+id/cupcake_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cupcake"
        app:layout_constraintEnd_toStartOf="@+id/cookies_check_box"
        app:layout_constraintStart_toEndOf="@+id/cake_check_box"
        app:layout_constraintTop_toTopOf="@+id/cake_check_box" />

    <CheckBox
        android:id="@+id/cookies_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cookies"
        app:layout_constraintEnd_toStartOf="@+id/dessert_check_box"
        app:layout_constraintStart_toEndOf="@+id/cupcake_check_box"
        app:layout_constraintTop_toTopOf="@+id/cupcake_check_box" />

    <CheckBox
        android:id="@+id/dessert_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/dessert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cookies_check_box"
        app:layout_constraintTop_toTopOf="@+id/cookies_check_box" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/size_text_imput_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dessert_check_box">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/size_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/size"
            tools:ignore="HardcodedText,TextContrasCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cake_filling_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_text_imput_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cake_filling_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cake_filling"
            tools:ignore="HardcodedText,TextContrasCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/message_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cake_filling_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            tools:ignore="HardcodedText,TextContrasCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/date_of_order_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/date_of_order"
        android:textColor="#040000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_text_input_layout" />

    <Button
        android:id="@+id/date_of_orden_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/ic_calendar"
        android:text="@string/date_format"
        app:layout_constraintBottom_toBottomOf="@+id/date_of_order_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_of_order_text_view"
        app:layout_constraintTop_toTopOf="@+id/date_of_order_text_view"
        tools:ignore="RtlHardcoded,TextContrastCheck" />

    <ImageView
        android:id="@+id/photo_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/remarks_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_of_orden_button"
        app:srcCompat="@drawable/ic_camera" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/remarks_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_image_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/remarks_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/remarks"
            tools:ignore="HardcodedText,TextContrasCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remarks_text_input_layout"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>