<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contact.ContactFragment" >


    <ImageView
        android:id="@+id/aleste_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="98dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/facebook_edit_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/facebook"
        android:hint="@string/facebook"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aleste_image_view"
        tools:ignore="RtlHardcoded" />


    <Button
        android:id="@+id/instagram_edit_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/instagram"
        android:hint="@string/instagram"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_edit_text"
        tools:ignore="RtlHardcoded" />


    <Button
        android:id="@+id/whatsApp_edit_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/whatsapp"
        android:hint="@string/whatsapp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instagram_edit_text"
        tools:ignore="RtlHardcoded" />


</androidx.constraintlayout.widget.ConstraintLayout>